# Compute-Shader-Ray-Tracer

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  TODO.md  a.out  benchmarks.md  def.comp  def.frag  def.vert  main.c
shaders/: def.comp  def.vert
src/: gl_utils.c  gl_utils.h  linalg.c  linalg.h  main.c  scene_buffer.c  scene_buffer.h
